# S7

./: CMakeLists.txt  README.md  XS7.cpp  XS7.h  globals.h  page.xpm
Resources/: PKGBUILD
Resources/InsaneWidget/: CMakeLists.txt  Common.h  DefsInsaneWidget.h  InsaneWorker.cpp  InsaneWorker.h  PixelToImageWriter.cpp  PixelToImageWriter.h  PixelToPdfWriter.cpp  PixelToPdfWriter.h  XInsaneWidget.cpp  XInsaneWidget.h  XScannerWidget.cpp  XScannerWidget.h
Resources/InsaneWidget/CMake/: FindLibInsane.cmake  FindPaper.cmake  FindPoDoFo.cmake
Resources/InsaneWidget/UI/: InsaneWidget.cpp  InsaneWidget.h  InsaneWidget.pjd  ScannerWidget.cpp  ScannerWidget.h
Resources/Lokalize/: 0_getstrings.sh  2_makemo.sh
Resources/Lokalize/fr/: CB7.mo  S7.po  S7.po.bak-2025-06-26-22:47:15
Resources/StampWidget/: CMakeLists.txt  DefsStampWidget.h  StampWorker.cpp  StampWorker.h  XStampWidget.cpp  XStampWidget.h  XStampWidgets.cpp  XStampWidgets.h
Resources/StampWidget/UI/: StampWidget.cpp  StampWidget.h  StampWidget.pjd  StampWidgets.cpp  StampWidgets.h
Resources/UI/S7/: S7.pjd  s7.cpp  s7.h  s7app.cpp  s7app.h
Resources/Utilities/: CMakeLists.txt  ConfigEditorPopup.cpp  ConfigEditorPopup.h  MiscTools.cpp  MiscTools.h  PopupTransientWindow.cpp  PopupTransientWindow.h  TimeredStatusBar.cpp  TimeredStatusBar.h  XClientData.hpp
